# fph-haskell-uog-2018

./: .gitignore  LICENSE  README.md  Setup.hs  cabal.sandbox.config  init.csv  protect-the-lambda.cabal
main/: Main.hs
src/Tafl/: Core.hs  Interact.hs  Logic.hs  Options.hs  Process.hs
test/: Internal.hs  Tests.hs  Utils.hs  Whole.hs
test/capture-001/: expected  input  run
test/capture-002/: expected  input  run
test/capture-003/: expected  input  run
test/capture-004/: expected  input  run  test.csv
test/capture-005/: expected  game.csv  input  run
test/capture-006/: game.csv  input  run
test/capture-007/: game.csv  input  run
test/endgame-001/: expected  input  run
test/endgame-002/: expected  input  run
test/endgame-003/: ending.csv  expected  input  run
test/endgame-004/: ending.csv  expected  input  run  surrounded.csv
test/endgame-005/: expected  input  run  weakobjects.csv
test/hello-001/: expected  run
test/interact-001/: expected  output.csv  run
test/interact-002/: expected  input  run
test/loadsave-001/: expected  game.csv  input  run
test/loadsave-002/: expected  game.csv  input  run
test/loadsave-003/: expected  input  run
test/loadsave-004/: dodgychars.csv  expected  input  missingfirstline.csv  run  smallboard.csv
test/loadsave-005/: expected  input  run
test/loadsave-006/: expected  run
test/moves-001/: expected  input  run
test/moves-002/: expected  input  run
test/moves-003/: input  run
test/moves-004/: input  run
test/moves-005/: expected  input  run
test/moves-006/: input  run
test/moves-007/: expected  input  run
test/moves-008/: expected  input  run
test/special-001/: board.csv  expected  input  run
test/special-002/: expected  input  run
test/special-003/: board.csv  expected  input  run
